--- a/homescreen.html
+++ b/homescreen.html
@@ -2,9 +2,9 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>App Menu With Lock Screen</title>
+  <title>Echozone App Menu With Lock Screen</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0">
-<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet"><link rel="stylesheet" href="./style.css">
+<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet"><link rel="stylesheet" href="./homescreen.css">
 
 </head>
 <body>
